<resources>
    <string name="app_name">AddaBooking</string>
    <string name="hello">Hello</string>
    <string name="tennis_court">Tennis Court</string>
    <string name="clubhouse">Club House</string>
    <string name="choose_date">Choose Date</string>
    <string name="time_from">Time From</string>
    <string name="time_to">Time To</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="check_availability">Check Availability</string>
    <string name="time_error">End time cannot be greater than or equal to start time</string>
    <string name="facility">Facility Type : %1$s</string>
    <string name="date">Date : %1$s</string>
    <string name="time">Time : %1$s : 00 - %2$s : 00</string>
    <string name="hours">Hours : %1$s</string>
    <string name="price">Price : %1$s</string>
    <string name="rate_clubhouse">Rate : 10:00 – 16:00 : 100/hr \t 16:00 – 22:100 : 500/hr </string>
    <string name="rate_tenniscourt">Rate : 50/hour </string>
    <string name="booking_failure">Sorry, this slot is already booked!!</string>
    <string name="booking_availability">Congratulation!! This slot is available!!\n Find below the details.\n Click on Confirm button below to confirn booking.</string>
</resources>